--- a/Finding_Workspace.ipynb
+++ b/Finding_Workspace.ipynb
@@ -4,16 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **HW2: Kinematics of Robot**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "คำชี้แจง\n",
-    "1. ให้เขียนโค้ดเพื่อตอบโจทย์ในแต่ละข้อในไฟล์นี้ และแสดงวิธีทำข้อที่ 1 (ต้องมี) และข้ออื่น ๆ (ถ้ามี) ลงบนกระดาษทด (1 กระดาษทด/คู่)\n",
-    "2. ส่งงานเป็นไฟล์ ZIP โดยตั้งชื่อ FRA333_HW2_65xx_65xx.zip โดยมีไฟล์นี้ชื่อ HW2_notebook.ipynb และไฟล์กระดาษทดที่ตั้งชื่อ 65xx_65xx.pdf อยู่ข้างใน"
+    "# Kinematics of Robot**"
    ]
   },
   {
@@ -152,6 +143,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3D Workspace "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -196,6 +194,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Workspace at XY XZ and YZ Plane"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -213,19 +218,11 @@
    ],
    "source": [
     "\n",
-    "# XY XZ and YZ \n",
-    "\n",
-    "\n",
-    "# Assume 'robot' is already defined in your notebook, representing the robot model\n",
-    "# Create a grid of joint angles for systematic sampling\n",
     "n_points_per_joint = 100  # Number of points to sample per joint\n",
     "q_range = np.linspace(-np.pi, np.pi, n_points_per_joint)  # Joint angles from -pi to pi\n",
     "Q = np.meshgrid(q_range, q_range, q_range)  # Create grid for 3 joints (assuming 3DOF)\n",
     "Q = np.vstack([q.flatten() for q in Q]).T  # Flatten the grid into a list of joint configurations\n",
     "\n",
-    "# Forward kinematics to calculate all end-effector positions\n",
-    "# Here, we assume robot.fkine(Q[i, :]) is the forward kinematic function giving the position (translation)\n",
-    "# Mock robot.fkine since the exact robot is not defined in the extracted code\n",
     "def mock_fkine(q):\n",
     "    # Simulate forward kinematics with simple transformation\n",
     "    # A simple 3DOF system: just summing the angles to get a position for demo\n",
